descriptive commit message

--- a/array.html
+++ b/array.html
@@ -7,7 +7,7 @@
     
 </body>
 <script>
-    const friend=["rahul","priyanshu","kunal","saurav",420,600];
+    // const friend=["rahul","priyanshu","kunal","saurav",420,600];
     // let a=friend.length;
     // document.write(a,"<br>")
     // document.write(friend[3] ,"<br>")
@@ -21,7 +21,45 @@
     // for(j=friend.length-1;j>=0,j--){
     //     document.write(j+1,":",friend[j],"<br>")
     // }
-    m=friend.toString()
-    document.write(m)
+    // m=friend.toString()
+    // document.write(m)
+    // let cars=[]
+    // car[0]="Maruti"
+    // car[1]="tata"
+    // car[2]="hyundai"
+    // car[3]="nano"
+    // document.write(cars)
+    // var str="hello world"
+    // var str1="hi world"
+    // var str2="hello arnav"
+    // document.write(str+str1);
+    // var a= str.concat(str1,str2)
+    // document.write(a+"<br>");
+    // let string="hello sailu how are you?";
+    // var b=string.split("a")
+    // document.write(b)
+    // console.log(b+"<br>")
+    // let a=string.repeat(3)
+    // document.write(a)
+    // let string="hello shailu how are you";
+    // let a=string.slice(0,-1)
+    // document.write(a)
+    // let num="123.3";
+    // let numb=parseInt(num)
+    // let numbe=parseFloat(num)
+    // document.write(num,"<br>")
+    // document.write(numb)
+    // document.write(typeof(numb),"<br>")
+    // document.write(numbe)
+    // document.write(typeof(numbe))
+    // let num=10.2532343;
+    // // let r=num.toFixed(2);
+    // // document.write(r)
+    // let s=Number.isInteger(num)
+    // document.write(s)
+    // let num=10.2334;
+    // document.write(Math.ceil(num),"<br>")
+    // document.write(Math.floor(num))
+    
 </script>
 </html>
