--- a/array.html
+++ b/array.html
@@ -59,7 +59,22 @@
     // document.write(s)
     // let num=10.2334;
     // document.write(Math.ceil(num),"<br>")
-    // document.write(Math.floor(num))
+    // document.write(Math.floor(num),"<br>")
+    // document.write(Math.round(num),"<br>")
+    // round is used for rounding off the value
+    // document.write(Math.trunc(num),"<br>")
+    // trunc remove the decimal value
+    // document.write(Math.max(10,20,35),"<br>")
+    // document.write(Math.min(10,20,35),"<br>")
+    // document.write(Math.sqrt(num),"<br>")
+    // document.write(Math.power(num),"<br>")
+    // document.write(Math.cbrt(num),"<br>")
+    // cbrt is used for cuberoot
+    // document.write(Math.abs(num),"<br>")
+    // it is used to make any value positive
+    // document.write(Math.pow(num,5),"<br>")
+    // it is used to power of any num
+    // document.write(Math.random(1,5),"<br>")
     
 </script>
 </html>
