--- a/array.html
+++ b/array.html
@@ -75,6 +75,33 @@
     // document.write(Math.pow(num,5),"<br>")
     // it is used to power of any num
     // document.write(Math.random(1,5),"<br>")
-    
+    // let n=new Date();
+    // document.write(n.getDate(),"/",n.getMonth(),"/",n.getFullYear())
+    // let m=new TimeRanges();
+    // document.write(m.getUTCMinutes())
+    // let n=new Date;
+    // let d=new Date("Se")
+    // document.write(n.getDate(),"/",n.getMonth(),"/",n.getFullYear(),"<br>");
+    let n=new Date("januar 9 2008");
+    let d=new Date();
+    let v=n.getDate();
+    document.write(n.getDay())
+    switch(v){
+        case 1:document.write("Monday");
+        break;
+        case 2:document.write("tuesday");
+        break;
+        case 3:document.write("Wednesday");
+        break;
+        case 4:document.write("Thursday");
+        break;
+        case 5:document.write("Friday");
+        break;
+        case 6:document.write("Saturday");
+        break;
+        case 7:document.write("Sunday");
+        break;
+}
+
 </script>
 </html>
